src/objects/MYBZ_IHS_Division__c.object
<CustomObject>
    <fields>
        <fullName>Alignment__c</fullName>
        <label>Alignment</label>
        <picklist>
            <picklistValues>
                <fullName>TRTRY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSTRCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AREA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVSN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <label>Metric</label>
        <picklist>
            <picklistValues>
                <fullName>TRx</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NRx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gross Margin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Profit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Ref__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <referenceTo>MYBZ_Product__c</referenceTo>
        <relationshipName>Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <label>Range</label>
        <picklist>
            <picklistValues>
                <fullName>1M</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>3M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>IHS Division</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Alignment__c</columns>
        <columns>Area__c</columns>
        <columns>District__c</columns>
        <columns>End_Date__c</columns>
        <columns>Metric__c</columns>
        <columns>Product_Ref__c</columns>
        <columns>Range__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Territory__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Value__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IHS Division</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>